--- a/style.css
+++ b/style.css
@@ -14,3 +14,12 @@
         width:300px;
     }
 }
+
+
+.dancing-script {
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight:700;
+  font-style: normal;
+}
+  
