--- a/style.css
+++ b/style.css
@@ -28,4 +28,24 @@
     color: white;
    
    }
-  
+   .offer-time{
+    display: flex;
+   }
+   .offer-time div{
+    flex-basis: 100px;
+   }
+   .offer-time div p{
+    font-size: 50px;
+   }
+   .rocket{
+    width: 250px;
+    position: absolute;
+    right: 10%;
+    bottom: 0;
+   }
+
+   .permanent-marker-regular {
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
